# sushka-shop-be

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  alembic.ini  buildspec.yml  docker-compose.yml  entrypoint.sh  example_env.txt  logging_config.py  main.py  pyproject.toml  requirements.txt  supervisord.conf
alembic/versions/: 00c2aae735bb_added_poshta_fields_to_orders_table.py  0765abaf2581_product_and_product_category.py  09007ede6a12_added_enum_to_rate_field.py  0e00beea0263_removed_order_table.py  0f7e636a83e8_merge_message.py  0f91d7a95b0a_create_orders_table_and_tables_for_.py  13f4bd58c9b8_added_is_authenticated_field_to_orders_.py  1a2a79cca82b_removed_review_table.py  1ca07d24386e_create_email_addresses_table_to_send_.py  1fb03cc3a1fd_added_is_active_field_to_nova_poshta_.py  247ea90218c0_create_orders_table_and_ordered_.py  2d25a57a3b97_product_create_at_update_at.py  2ed5bc393d6a_added_is_delivery_field_to_nova_poshta_.py  32f2611e3793_created_orders_and_ordered_products_.py  33d687d819db_remove_tables_of_anonym_user.py  39e2c779f7d3_remove_is_created_field_from_orders_.py  3aa270697bce_changed_default_value_of_city_field_of_.py  40df38905f41_create_table_of_used_email_tokens.py  43428144a079_add_field_is_active_to_price.py  4758449b43cc_create_order_table.py  485d11298cf8_create_basket_for_anonym_user.py  5369f42c21ba_added_quantity_field_to_basket_item.py  55c867d5bded_changed_type_of_rate_field.py  56fa40e5cb9d_refactor_favorites_create_favorites_and_.py  6a67321cf3ee_remove_orders_table.py  (+42 more)
docker/: app.sh
redis/: Dockerfile  redis.conf
(+87 files in other folders)
