[tool.poetry]
name = "store"
version = "0.1.0"
description = ""
authors = ["Vladislav <109065019+TimVladislav13010@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.98.0"
uvicorn = {extras = ["standard"], version = "^0.22.0"}
sqlalchemy = "^2.0.16"
psycopg2-binary = "^2.9.6"
alembic = "^1.11.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
