[tool.poetry]
name = "store"
version = "0.1.0"
description = ""
authors = ["Vladislav <109065019+TimVladislav13010@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.98.0"
uvicorn = {extras = ["standard"], version = "^0.22.0"}
sqlalchemy = "^2.0.16"
psycopg2-binary = "^2.9.6"
alembic = "^1.11.1"
python-dotenv = "^1.0.0"
python-jose = "^3.3.0"
passlib = "^1.7.4"
python-multipart = "^0.0.6"
fastapi-mail = "^1.3.1"
pydantic = "1.10.7"
redis = "^5.0.0"
sentry-sdk = {version = "1.31.0", extras = ["fastapi"]}
cloudinary = "^1.34.0"
faker = "^19.6.2"
urllib3 = ">=2.0.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
